--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,5 @@
 Esta es la historia de Freddy Vega
 
-Freddy Vega tiene 33 años y nació en Colombia,
-viviendo en todo el mundo
+Freddy Vega tiene 37 años y nació en Colombia, viviendo en todo el mundo
 
 Hoy hablaremos de su historia.
