Agregamos un cambio a su estatura

--- a/history.txt
+++ b/history.txt
@@ -3,3 +3,5 @@ Esta es la historia de Freddy Vega
 Freddy Vega tiene 37 años y nació en Colombia, viviendo en todo el mundo
 
 Hoy hablaremos de su historia.
+
+En cámara parece alto pero no est atb alto
