--- a/history.txt
+++ b/history.txt
@@ -2,6 +2,6 @@ Esta es la historia de Freddy Vega
 
 Freddy Vega tiene 37 años y nació en Colombia, viviendo en todo el mundo
 
-Hoy hablaremos de su historia.
+Hoy hablaremos de su vida.
 
 En cámara parece alto pero no est atb alto
