Reemplazo de una versión por otra de la historia

--- a/history.txt
+++ b/history.txt
@@ -2,6 +2,4 @@ Esta es la historia de Freddy Vega
 
 Freddy Vega tiene 37 años y nació en Colombia, viviendo en todo el mundo
 
-Hoy hablaremos de su vida.
-
-En cámara parece alto pero no est atb alto
+Mañana nos enfocaremos en su vida laboral
