acabe de hacer un soft reset

--- a/history.txt
+++ b/history.txt
@@ -2,4 +2,7 @@ Esta es la historia de Freddy Vega
 
 Freddy Vega tiene 37 años y nació en Colombia, viviendo en todo el mundo
 
-Mañana nos enfocaremos en su vida laboral
+Hoy hablaremos de su vida laboral.
+
+Hoy hablaremos de su historia.
+
