--- a/history.txt
+++ b/history.txt
@@ -4,5 +4,5 @@ Freddy Vega tiene 37 años y nació en Colombia, viviendo en todo el mundo
 
 Hoy hablaremos de su vida laboral.
 
-Mañana hablaremos de su historia.
+Hoy hablaremos de su historia.
 
